fix: modify focus z-index

--- a/packages/toast-ui.grid/src/css/grid.css
+++ b/packages/toast-ui.grid/src/css/grid.css
@@ -183,7 +183,7 @@
 .tui-grid-layer-focus-border {
   position: absolute;
   overflow: hidden;
-  z-index: 19;
+  z-index: 20;
 }
 .tui-grid-layer-selection {
   position: absolute;
